tests/typechecking/invalid/let int in let float.ml
let x = 1+1 in 
let y = 1.1+1.2 in 
print_int x
